docs: update swagger definitions
